# CS5487_PA3

./: .gitignore  README.md  data_shape.ipynb  mnist_mlp_exercise.ipynb  pyproject.toml
