[project]
name = "CS5487_PA3"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "c4y", email = "c4y@c4y.dev"},
]
dependencies = ["scipy>=1.14.1", "rich>=13.9.4", "torch==2.5.1+cu124", "torchvision>=0.20.1", "notebook>=7.2.2", "ipykernel>=6.29.5", "matplotlib>=3.9.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[[tool.pdm.source]]
include_packages = ["torch", "torch*"]
url = "https://download.pytorch.org/whl/cu124"
name = "torch"